# openesp_mine

application/edge_agent/: sdkconfig.defaults
application/edge_agent/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
components/claw_capabilities/cap_at_mqtt/: CMakeLists.txt
components/claw_capabilities/cap_cli/: CMakeLists.txt
components/claw_capabilities/cap_files/: CMakeLists.txt
components/claw_capabilities/cap_im_attachment/: CMakeLists.txt
components/claw_capabilities/cap_im_qq/: CMakeLists.txt
components/claw_capabilities/cap_im_tg/: CMakeLists.txt
components/claw_capabilities/cap_im_wechat/: CMakeLists.txt
components/claw_capabilities/cap_llm_inspect/: CMakeLists.txt
components/claw_capabilities/cap_mcp_client/: CMakeLists.txt
components/claw_capabilities/cap_mcp_server/: CMakeLists.txt  idf_component.yml
components/claw_capabilities/cap_obs/: CMakeLists.txt
components/claw_capabilities/cap_router_mgr/: CMakeLists.txt
components/claw_capabilities/cap_scheduler/: CMakeLists.txt
components/claw_capabilities/cap_session_mgr/: CMakeLists.txt
components/claw_capabilities/cap_skill_mgr/: CMakeLists.txt
components/claw_capabilities/cap_system/: CMakeLists.txt
components/claw_capabilities/cap_time/: CMakeLists.txt
components/claw_capabilities/cap_web_search/: CMakeLists.txt
components/claw_capabilities/cap_xfyun_speech/: CMakeLists.txt
components/claw_modules/claw_cap/: CMakeLists.txt
docs/: astro.config.mjs
docs/public/: _redirects
docs/src/flash-tool/: i18n.ts  (+1 more)
docs/tools/: check-doc-line-alignment.ts
(+209 files in other folders)
